<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/nav_one"
        android:id="@+id/optionOne"
        android:icon="@drawable/icon_circular"/>

    <item
        android:title="@string/nav_two"
        android:id="@+id/optionTwo"
        android:icon="@drawable/icon_circular"/>

    <item
        android:title="@string/nav_three"
        android:id="@+id/optionThree"
        android:icon="@drawable/icon_circular"/>

    <item android:title="@string/nav_extras">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:title="@string/nav_extras_one"
                    android:id="@+id/extraOne"
                    android:icon="@drawable/icon_circular"/>
            </group>
        </menu>
    </item>

</menu>